# stock-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ecosystem.config.cjs  pyproject.toml
.github/workflows/: deploy.yml
scripts/: migrate.py
stock_service/: auth.py  config.py  database.py  main.py  mcp_server.py
stock_service/data/: _cache.py  _registry.py  factor.py  finance.py  listing.py  margin.py  news.py  quote.py
stock_service/data/adapters/: akshare.py  bailian.py  tushare.py
stock_service/data/store/: factor.py  finance.py  listing.py  margin.py  news.py  quote.py
stock_service/models/: __init__.py  factor.py  finance.py  listing.py  margin.py  news.py  quote.py
stock_service/services/: _utils.py  factor.py  finance.py  listing.py  margin.py  news.py  quote.py
tests/: conftest.py  test_mcp_factor.py  test_mcp_financial.py  test_mcp_get_daily_quote.py  test_mcp_listing.py  test_mcp_news.py  test_mcp_percentile.py  test_mcp_reverse_repo.py  test_mcp_search_stock.py  test_mcp_technical.py  test_stale_days.py
