[project]
name = "stock-service"
version = "0.1.0"
description = "A-share market data and MCP service"
readme = "README.md"
authors = [
    { email = "747311978@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pandas>=3.0.1",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "tushare>=1.4.25",
    "uvicorn>=0.41.0",
    "mcp[cli]>=1.0.0",
    "akshare>=1.15.0,<2.0.0",
    "openai>=2.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["stock_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
